# mm_rs

./: .gitignore  BEST_PRACTICES.md  CLAUDE.md  CLAUDE_OPS.md  Cargo.toml  DASHBOARD_STATUS.md  DEV_DIARY.md  DIARY.md  LICENSE  PAIR_EVAL_DESIGN.md  README.md  bootstrap_pnl.py  dashboard.py  kraken_mcp.py  mcp_server.py  monitor.sh  monitor.sh.example  pnl.py  pnl_analyzer_state.json  pnl_state.json  run_bot.sh  run_bot.sh.example  scan_loop.sh  scan_loop.sh.example  scanned_pairs.json  scanned_pairs_depth.json  session.json  state.json  state_store.json
crates/bot/: Cargo.toml
crates/bot/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/core/src/api/: mod.rs  server.rs  shared.rs
crates/core/src/engine/: core.rs  inventory.rs  quoter.rs
crates/core/src/exchange/: auth.rs  live.rs  messages.rs  mod.rs  proxy_client.rs  replay.rs  rest.rs  ws.rs
crates/core/src/pnl/: tracker.rs
crates/core/src/proxy/: mod.rs  rest_proxy.rs  ws_proxy.rs
crates/core/src/risk/: kill_switch.rs  limits.rs  mod.rs  rate_limiter.rs
crates/core/src/state/: bot_state.rs  csv_logger.rs  mod.rs
crates/core/src/state_store/: client.rs  messages.rs  mod.rs
crates/core/src/traits/: clock.rs  event_source.rs  exchange_client.rs  mod.rs  order_manager.rs  trade_logger.rs
crates/core/src/types/: book.rs  command.rs  event.rs  fill.rs  managed_pair.rs  mod.rs  order.rs  pair.rs  position.rs  ticker.rs
crates/core/tests/: replay_integration.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: main.rs
crates/dashboard/src/static/: index.html
crates/exchange-api/: Cargo.toml
crates/exchange-api/src/: capabilities.rs  command.rs  event.rs  lib.rs  order_tracking.rs  traits.rs
crates/mock-exchange/: Cargo.toml
crates/mock-exchange/src/: config.rs  main.rs  messages.rs  orderbook.rs  orders.rs  rest.rs  scenario.rs  simulation.rs  state.rs  ws_private.rs  ws_public.rs
crates/pnl-analyzer/: Cargo.toml
crates/pnl-analyzer/src/: bootstrap.rs  config.rs  edge.rs  main.rs  state_store.rs
crates/pnl-tracker/: Cargo.toml
crates/pnl-tracker/src/: main.rs
crates/proxy/: Cargo.toml
crates/proxy-coinbase/: Cargo.toml
crates/proxy-coinbase/src/: auth.rs  main.rs  pairs.rs  rest.rs  state.rs  translate.rs  ws.rs
crates/proxy-common/: Cargo.toml
crates/proxy-common/src/: auth.rs  lib.rs  order_tracking.rs  rate_limit.rs  types.rs  ws_relay.rs
crates/proxy-kraken/: Cargo.toml
crates/proxy-kraken/src/: auth.rs  main.rs  rest.rs  ws.rs
crates/proxy/src/: main.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: main.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: main.rs
crates/state-store/: Cargo.toml
crates/state-store/src/: auth.rs  handlers.rs  main.rs  state.rs  store.rs  types.rs  ws.rs
crates/trading-primitives/: Cargo.toml
crates/trading-primitives/src/: book.rs  config.rs  fill.rs  lib.rs  order.rs  pair.rs  protocol.rs  symbol.rs
crates/trading-primitives/src/traits/: exchange_client.rs  mod.rs  order_manager.rs
crates/trend-trader/: Cargo.toml
crates/trend-trader/src/: main.rs
docs/: DETERMINISTIC_MOCK_DESIGN.md  INTEGRATION_TEST_LOG.md  MOMENTUM_STRATEGY.md  STATE_STORE_API.md
logs/: trades.csv
src/: config.rs  lib.rs  main.rs
src/api/: server.rs  shared.rs
src/engine/: mod.rs  quoter.rs
src/exchange/: live.rs  messages.rs  mod.rs  rest.rs  ws.rs
src/risk/: kill_switch.rs  limits.rs  mod.rs  rate_limiter.rs
src/state/: csv_logger.rs  json_store.rs  mod.rs
src/traits/: dead_man_switch.rs  mod.rs  state_store.rs
src/types/: event.rs  fill.rs  mod.rs  order.rs
test_data/: recorded.jsonl
test_data/scenarios/: crash_recovery.json  flash_spike.json  gradual_uptrend.json  multi_pair_divergence.json  sideways_choppy.json  spread_widening.json
tests/: replay_integration.rs
