[package]
name = "kraken-mm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
csv = "1"
anyhow = "1"
url = "2"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[[bin]]
name = "kraken-mm"
path = "src/main.rs"

[[bin]]
name = "recorder"
path = "src/bin/recorder.rs"
