[package]
name = "mock-exchange"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mock-exchange"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
ordered-float = "4"

[dev-dependencies]
rust_decimal = "1"
