[package]
name = "proxy-coinbase"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coinbase-proxy"
path = "src/main.rs"

[dependencies]
proxy-common = { path = "../proxy-common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
hmac = "0.12"
sha2 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
