[package]
name = "proxy-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tracing = "0.1"
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
