[package]
name = "kraken-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kraken-proxy"
path = "src/main.rs"

[dependencies]
kraken-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
