[package]
name = "state-store"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "state-store"
path = "src/main.rs"

[dependencies]
trading-primitives = { path = "../trading-primitives" }
rust_decimal = { version = "1", features = ["serde-with-float"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
