[package]
name = "trading-primitives"
version = "0.1.0"
edition = "2021"
description = "Exchange-agnostic trading types, traits, and business logic"

[dependencies]
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
anyhow = "1"

[dev-dependencies]
rust_decimal_macros = "1"
