[package]
name = "trend-trader"
version = "0.1.0"
edition = "2021"
description = "EMA trend-following bracket trader for volume farming on BTC/USDC, ETH/USDC, SOL/USDC"

[[bin]]
name = "trend-trader"
path = "src/main.rs"

[dependencies]
exchange-api = { path = "../exchange-api" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
